force-app/main/default/objects/CLQ_Message__c/CLQ_Message__c.object-meta.xml
<CustomObject>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>