force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Actions__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Actions__c</fullName>
    <description>Email Actions</description>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark As Read</fullName>
            </value>
            <value>
                <fullName>Mark As Unread</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>