force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Corresponding_Case__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Corresponding_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the message to the corresponding Case record.</description>
    <inlineHelpText>Link the message to the corresponding Case record.</inlineHelpText>
    <label>Corresponding Case</label>
    <referenceTo>CLQ_Case_Custom__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>