force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Corresponding_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Corresponding_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the message to the corresponding program transaction.
[Ramana]: This can be deleted. Duplicate field.</description>
    <label>Delete_Corresponding Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>ProgramMessage</relationshipName>
    <type>Lookup</type>
</CustomField>