force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that relates an email message to an inspection when available.
(Added by Vamsi V on 3/14/17 for CDC Web)</description>
    <inlineHelpText>Link the message to the corresponding Inspection.</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>