force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
            <value>
                <fullName>Inspections</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>