force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Message_Detail__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Message_Detail__c</fullName>
    <description>Body of the corresponding email.</description>
    <inlineHelpText>Body of the corresponding email.</inlineHelpText>
    <label>Message Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>