force-app/main/default/objects/CLQ_Message__c/fields/CLQ_Subject__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Subject__c</fullName>
    <description>Subject of the Email</description>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>