force-app/main/default/objects/CLQ_Message__c/fields/Email_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To__c</fullName>
    <description>Field to capture the email recipients in the &quot;to&quot; field</description>
    <label>Email Sent To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>