force-app/main/default/objects/CLQ_Message__c/fields/Is_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be updated to true if onBase call is successful</description>
    <label>Is Successful</label>
    <type>Checkbox</type>
</CustomField>