force-app/main/default/objects/CLQ_Message__c/fields/OCLQS_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>OCLQS_Document_Link__c</fullName>
    <description>OnBase Document Link</description>
    <label>Document Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>