force-app/main/default/objects/CLQ_Message__c/fields/Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the message to the corresponding program transaction</description>
    <inlineHelpText>Link the message to the corresponding program transaction</inlineHelpText>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Messages (Program Transaction)</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>