force-app/main/default/objects/CLQ_Message__c/fields/Standard_Document__c.field-meta.xml
<CustomField>
    <fullName>Standard_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Standard Document ID will be updated if onBase Call is Successful</description>
    <label>Standard Document</label>
    <referenceTo>CLQ_Standard_Document__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>